[package]
name = "schermz"
version = "0.1.13"
authors = ["trassmann"]
license = "MIT"
description = "A tool to generate a schema for a given JSON file."
readme = "README.md" 
homepage = "https://github.com/trassmann/schermz"
repository = "https://github.com/trassmann/schermz"
keywords = ["cli", "json", "schema", "model", "generator"] 
edition = "2018"
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0"
clap = { version = "4.3.12", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
 