[package]
name = "schermz"
version = "0.3.5"
authors = ["trassmann"]
license = "MIT"
description = "A tool to generate a schema for a given JSON file."
readme = "README.md" 
homepage = "https://github.com/trassmann/schermz"
repository = "https://github.com/trassmann/schermz"
keywords = ["cli", "json", "schema", "model", "generator"] 
edition = "2018"
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0"
clap = { version = "4.5.43", features = ["derive"] }
itertools = "0.13.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
 